fixed alignment of objects within header and nav sections for width<500px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -121,8 +121,8 @@ li {
 	margin: 0;
 	padding: 0;
 	border-top: var(--main-border-style);
-	min-height: 52.5px;
-	max-height: 52.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
+	min-height: 53.5px;
+	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
 	width: 100%;
 	box-sizing: border-box;
 	background-color: white;
@@ -237,6 +237,7 @@ li {
 	&_ul {
 		display: flex;
 		justify-content: space-evenly;
+		align-items: end;
 		list-style: none;
 		margin: 0;
 		padding: 0;
@@ -262,7 +263,7 @@ li {
 		margin: 0;
 		padding: 0;
 		width: 100%;
-		height: 100%;
+		height: 50.5px;
 
 		@media only screen and (500px<=width) {
 			height: 50.25px;
@@ -455,6 +456,7 @@ button:hover {
 .middle-container {
 	width: 100%;
 	position: relative;
+	top: -0.5px;
 	//height: auto;
 	display: flex;
 	flex-direction: column;
@@ -497,18 +499,14 @@ button:hover {
 	position: sticky;
 	display: flex;
 	flex-direction: column;
-	top: -0.5px;
-	//bottom:107px ;
 	margin: 0;
 	z-index: 1;
-	//margin-top:-20px;
 	padding: 0;
 	height: var(--header-height);
 	width: 100%;
 	max-width: 100%;
 	background-color: rgba($color: #ffffff, $alpha: 0.8);
 	backdrop-filter: blur(10px);
-	transition: margin-top 0.16s;
 	transition: top 0.16s;
 	transition-timing-function: ease-in-out;
 	transition-delay: 0ms;
